--- a/WindowsFormsApp4/Properties/Resources.resx
+++ b/WindowsFormsApp4/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="snowflakes3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\snowflakes3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rightleft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\rightleft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
